force-app/main/default/objects/Flosum__Pipeline__c/fields/Flosum__Full_Deploy__c.field-meta.xml
<CustomField>
    <fullName>Flosum__Full_Deploy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deploy the entire branch</description>
    <inlineHelpText>This feature is limited to the pipeline selected on the branch record, configured to execute automatically upon branch merge. When disabled, it deploys only the merged components; when enabled, it deploys all branch components regardless of merge status. It differs from Delta Deployment, which is only available when manually running the pipeline from the branch record.</inlineHelpText>
    <label>Full Deploy</label>
    <type>Checkbox</type>
</CustomField>